# Employee-Managment-System

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeConfigureLog.yaml  CMakeLists.txt  Developer.cpp  Developer.h  Employee.cpp  Employee.h  EmployeeManagement.cpp  EmployeeManagement.h  InstallScripts.json  Manager.cpp  Manager.h  README.md  TargetDirectories.txt  Utilities.cpp  Utilities.h  build.ninja  cache-v2-82c1638f1b4cc2329a58.json  clion-Debug-log.txt  cmakeFiles-v1-fad4d8354622dd7946dc.json  cmake_install.cmake  codemodel-v2-71bb33eeb07653afa8e8.json  compile_commands.json  index-2026-05-22T17-34-39-0109.json  main.cpp  modules.xml  rules.ninja  target-OOP_Project-Debug-5357b1b9f2e9b738a2ca.json  toolchains-v1-57c91af2fe2d47adae7f.json  workspace.xml
